--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 						'Engineer  ',
 						'Student  ',
 						'E-Sport Player',
+						'UI-UX Designer',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -497,7 +498,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
+                <strong class="number" data-number="50000">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
