--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/1.jpg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/abhi my image.jpg);">
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -587,7 +587,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="5">0</strong>
+                <strong class="number" data-number="500">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
