--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021 - 2025</span>
-    					<h2>Bachelor of Engineering</h2>
+    					<h2>Bachelor of Technology</h2>
     					<span class="position">Vellore Institute of Technology, Andhra Pradesh
 							</span>
     					<p class="mt-4">Grade: First class distinction.</p>
